--- a/WorkPlease.html
+++ b/WorkPlease.html
@@ -11,10 +11,10 @@
     </style>
   </head>
   <body>
-    <x-model class = "model" src = "x-model-testing/Teapot.obj"></x-model>
-/* bruh bruh bruh */
-    <script src = "x-model-testing/three.min.js"></script>
-    <script src = "x-model-testing/OBJLoader.js"></script>
-    <script src = "x-model-testing/model-element.min.js"></script>
+    <x-model class = "model" src = "../x-model-testing/Teapot.obj"></x-model>
+<!-- bruh bruh bruh -->
+    <script src = "../x-model-testing/three.min.js"></script>
+    <script src = "../x-model-testing/OBJLoader.js"></script>
+    <script src = "../x-model-testing/model-element.min.js"></script>
   </body>
 </html>
